# bullet-rust-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  llms.txt  openapi.json  release-plz.toml  renovate.json
.cargo/: config.toml
.github/workflows/: ci.yml  npm-publish.yml  release-plz.yml
docs/: sdk-ergonomics-research.md
docs/superpowers/specs/: 2026-06-17-wasm-intent-layer-design.md
examples/: .gitignore  README.md  package-lock.json  package.json  rest.rs  turbo.json  websocket.rs
examples/deno/: deno.json  index.ts  test.ts
examples/node/: create_vault.ts  index.mjs  package.json  test.mjs
examples/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  test.spec.ts
examples/web/app/: client-demo.tsx  client-loader.tsx  layout.tsx  page.tsx  server-data.tsx
rust/: CHANGELOG.md  Cargo.toml  build.rs  openapi.json
rust/benches/: simulate.rs  ws.rs
rust/examples/: rest.rs  simulate.rs  websocket.rs
rust/src/: client.rs  errors.rs  keypair.rs  lib.rs  metadata.rs  multisig.rs  orders.rs  parse.rs  receipts.rs  runtime_call.rs  sub_account.rs  trading.rs  transaction_builder.rs  transactions.rs  vault.rs
rust/src/ws/: client.rs  managed.rs  mod.rs  models.rs  topics.rs
rust/tests/: integration_test.rs
src/: client.rs  keypair.rs  lib.rs  transactions.rs
src/ws/: client.rs  mod.rs  models.rs  topics.rs
tests/: integration_test.rs
wasm/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
wasm/codegen/: emitter.rs  mod.rs  schema_walker.rs  type_mapper.rs
wasm/codegen/bullet_schema/: mod.rs
wasm/codegen/bullet_schema/emit/: enums.rs  mod.rs  namespaces.rs  startup_subpaths.rs  structs.rs
wasm/codegen/bullet_schema/emit/startup_subpaths/: calls.rs  errors.rs  helpers.rs  mod.rs  primitives.rs  shared.rs  topics.rs
wasm/codegen/bullet_schema/map/: enums.rs  mod.rs  primitives.rs  structs.rs  vecs.rs
wasm/codegen/bullet_schema/walk/: actions.rs  enums.rs  mod.rs  structs.rs
wasm/codegen/bullet_schema/walk/map/: enums.rs  mod.rs  newtypes.rs  options.rs  primitives.rs  structs.rs  vecs.rs
wasm/codegen/progenitor/: mod.rs
wasm/codegen/progenitor/emit/: client.rs  mod.rs  type_map.rs  types.rs
wasm/codegen/progenitor/walk/: mod.rs  utils.rs
wasm/codegen/progenitor/walk/extractions/: enum.rs  enum_extraction.rs  impl_extraction.rs  mod.rs  struct.rs  struct_extraction.rs
wasm/js/: bullet-sdk-error.d.ts  bullet-sdk-error.js
wasm/src/: client.rs  errors.rs  keypair.rs  lib.rs  metadata.rs  multisig.rs  sub_account.rs  transaction_builder.rs  transactions.rs  vault.rs
wasm/src/utils/: decimal.rs  mod.rs
wasm/src/ws/: client.rs  managed.rs  mod.rs  topics.rs
wasm/tests/: bullet_schema.test.ts  codegen.test.ts  decimals.test.ts  errors.test.ts  exchange-info.test.js  exchange-info.test.ts  helpers.ts  multisig.test.ts  progenitor.test.ts  startup_subpaths.test.ts  transactions.test.js  transactions.test.ts  vault.test.ts
