[workspace]
members = ["rust", "wasm"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bulletxyz/bullet-rust-sdk"

[workspace.dependencies]
bon = "3.9.0"
bullet-exchange-interface = { version = "0.3", features = ["schema"] }
# Optimize WASM binary size without affecting the rust crate
[profile.release]
lto = true

[profile.release.package.bullet-rust-sdk-wasm]
opt-level = "z"
codegen-units = 1
