[workspace]
members = ["rust", "wasm"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bulletxyz/bullet-rust-sdk"

[workspace.dependencies]
bon = "3.9.0"
bullet-exchange-interface = { version = "0.3", features = ["schema"] }

# Versioned path dep so release-plz cascades rust crate bumps into the wasm
# crate (otherwise a path-only dep is treated as "no version requirement" and
# the wasm crate's version stays frozen while rust bumps). release-plz keeps
# the version field in lockstep with rust/Cargo.toml on every release PR.
bullet-rust-sdk = { path = "rust", version = "0.0.19" }

[patch.crates-io]
# patch until upstream is merged
sov-universal-wallet = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "cf2641b7a39a2171d6747ce7b9c01ab4e5e7b6a4" }
bullet-exchange-interface = { git="https://github.com/bulletxyz/bullet-exchange-interface", rev="2e613972b8c7c028fb59c1e1d27c04692b16042a" }

# Optimize WASM binary size without affecting the rust crate
[profile.release]
lto = true

[profile.release.package.bullet-rust-sdk-wasm]
opt-level = "z"
codegen-units = 1
