[package]
name = "bullet-rust-sdk"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Rust SDK for the Bullet trading platform"
repository = "https://github.com/bulletxyz/bullet-rust-sdk"
links = "bullet_rust_codegen"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bullet-exchange-interface = { git = "https://github.com/bulletxyz/bullet-exchange-interface.git" }
bullet-ws-interface = { git = "https://github.com/bulletxyz/bullet-ws-interface.git" }

progenitor-client = "0.13"
reqwest = { version = "0.13", features = ["blocking"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = "1.0.216"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
futures = "0.3"
thiserror = "2"
url = "2"

# Signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
borsh = "1"
hex = "0.4"
base64 = "0.22"

# WebSocket (works on both native and WASM)
reqwest-websocket = { version = "0.6", features = ["json"] }
tracing = "0.1.41"

# Cross-platform time (std::time::Instant panics on WASM)
web-time = "1.1"
bon.workspace = true

# Cross-platform async timer (works on both native and WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = { version = "3", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
progenitor = "0.13"
serde_json = "1.0"
reqwest = { version = "0.13", features = ["blocking"] }
openapiv3 = "2"
schemars = "0.8"
syn = "2.0"
prettyplease = "0.2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"

[features]
default = []
# enable integration tests that require a local instance running
integration = []
