[package]
name = "bullet-rust-sdk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the Bullet trading SDK"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bullet-rust-sdk = { path = "../rust" }
bullet-exchange-interface.workspace = true

wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
serde                = { version = "1", features = ["derive"] }
serde-wasm-bindgen   = "0.6"
js-sys               = "0.3"
serde_json           = "1"
rust_decimal         = { version = "1", features = ["serde-with-str", "maths"] }
web-time             = "1.1"
console_error_panic_hook = "0.1"
futures-util         = "0.3"
bon.workspace        = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
bullet-exchange-interface.workspace = true
sov-universal-wallet = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "1c0d743b302b0101d67b6aaef64f8ed3c8004965", features = ["serde"] }
heck = "0.5"
quote = "1"
proc-macro2 = "1"
syn = "2"
prettyplease = "0.2"

